--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "bootstrap": "npm run clean:symlinks && npx lerna bootstrap --hoist --strict",
     "build": "cross-env NODE_ENV=production lerna run build --stream --ignore @asemirsk/gatsby-starter-bodiless",
     "build:only": "cross-env NODE_ENV=production lerna run build --stream --scope",
-    "build:packages": "cross-env NODE_ENV=production lerna run build --stream --ignore @sites/*",
+    "build:packages": "cross-env NODE_ENV=production lerna run build --scope @asemirsk/accessibility --include-filtered-dependencies --ignore @sites/*",
     "build:watch": "cross-env NODE_ENV=development lerna run build:watch --parallel",
     "build:env-vars": "cross-env NODE_ENV=production lerna run build:env-vars --stream",
     "build:tailwind-configs": "cross-env NODE_ENV=production lerna run build:tailwind-configs --stream",
