--- a/packages/bodiless-accordion/package.json
+++ b/packages/bodiless-accordion/package.json
@@ -19,6 +19,7 @@
     "access": "public"
   },
   "scripts": {
+    "a": "npm -v",
     "build": "tsc -p ./tsconfig.json && npm run build:api-doc",
     "build:watch": "npm run build -- --watch",
     "build:api-doc": "typedoc --out doc/api src",
