--- a/lerna.json
+++ b/lerna.json
@@ -8,6 +8,9 @@
     "publish": {
       "allowBranch": "release",
       "message": "chore(release): publish %s"
+    },
+    "version": {
+      "allowBranch": "main"
     }
   },
   "version": "1.0.0-beta.5"
