--- a/packages/gatsby-plugin-ssi/package.json
+++ b/packages/gatsby-plugin-ssi/package.json
@@ -20,10 +20,10 @@
     "access": "public"
   },
   "dependencies": {
+    "gatsby": "^4.10.3",
     "replace-in-file": "^6.2.0"
   },
   "peerDependencies": {
-    "gatsby": "~3.13.0",
     "react": "^17.0.2"
   }
 }
