--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -30,7 +30,7 @@ hooks:
         set -e
         npm run bootstrap
         npm run build:packages
-        npm run build -- --scope @sites/__cxstarter__
+        npm run build -- --scope @sites/$APP_SITE_NAME
         #robots.txt preparation
         export PSH_URL_REPLACER_SRC_FILE=$PLATFORM_DOCUMENT_ROOT/robots.txt
         export PSH_URL_REPLACER_TMP_FILE=$PLATFORM_DOCUMENT_ROOT/../static/robots_pshtmp.txt
@@ -42,7 +42,7 @@ hooks:
         export PSH_URL_REPLACER_TARGET_FILE=$APP_VOLUME/sitemap.xml
         node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/psh-url-replacer.js build
         # ssi preparation
-        export SSI_CONF_PATH=sites/__cxstarter__/ssi/ssi_conf.json
+        export SSI_CONF_PATH=sites/$APP_SITE_NAME/ssi/ssi_conf.json
         export DOCUMENT_ROOT=$PLATFORM_DOCUMENT_ROOT
         export VOLUME_DIR=$APP_VOLUME
         node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/generate-ssi-files.js build    
@@ -65,7 +65,7 @@ hooks:
         export PSH_URL_REPLACER_PROD_ENV=$APP_PROD_ENV
         node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/psh-url-replacer.js deploy
         # ssi files generation
-        export SSI_CONF_PATH=sites/__cxstarter__/ssi/ssi_conf.json
+        export SSI_CONF_PATH=sites/$APP_SITE_NAME/ssi/ssi_conf.json
         export VOLUME_DIR=$APP_VOLUME
         node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/generate-ssi-files.js deploy
 
@@ -83,14 +83,14 @@ web:
     locations:
         '/':
             # The public directory of the application relative to its root.
-            root: 'sites/__cxstarter__/public'
+            root: 'sites/$APP_SITE_NAME/public'
             index: ['index.html']
             scripts: false
             allow: true
             passthru: false
             expires: 6h
         '/___docs':
-            root: 'sites/__cxstarter__/doc'
+            root: 'sites/$APP_SITE_NAME/doc'
             index: ['index.html']
             scripts: false
             allow: true
@@ -100,4 +100,4 @@ variables:
     env:
         APP_VOLUME: '/app/volume'
         CHOKIDAR_USEPOLLING: true
-        APP_SITE_NAME: __cxstarter__
+        APP_SITE_NAME: $APP_SITE_NAME
