--- a/packages/bodiless-schema-org/package.json
+++ b/packages/bodiless-schema-org/package.json
@@ -17,6 +17,7 @@
   "files": [
     "/lib",
     "/bodiless.docs.json",
+    "/getDocs.js",
     "/doc"
   ],
   "repository": {
@@ -32,6 +33,7 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo"
   },
   "dependencies": {
+    "@bodiless/cli": "^1.0.0-beta.18",
     "@bodiless/components": "^1.0.0-beta.18",
     "@bodiless/core": "^1.0.0-beta.18",
     "@bodiless/fclasses": "^1.0.0-beta.18",
