--- a/packages/vital-card/package.json
+++ b/packages/vital-card/package.json
@@ -11,6 +11,7 @@
     "/lib",
     "/bodiless.docs.json",
     "/doc",
+    "/getDocs.js",
     "tailwind.config.js"
   ],
   "repository": {
@@ -29,6 +30,7 @@
     "copy": "copyfiles -u 1 \"./src/**/*.{css,png}\" \"./lib/\""
   },
   "dependencies": {
+    "@bodiless/cli": "^1.0.0-beta.18",
     "@bodiless/core": "^1.0.0-beta.18",
     "@bodiless/components": "^1.0.0-beta.18",
     "@bodiless/components-ui": "^1.0.0-beta.18",
