--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lerna:publish": "lerna publish from-git --yes --dist-tag latest",
     "lerna:canary": "lerna publish --canary --include-merged-tags --preid ks-canary --dist-tag ks-canary --force-publish",
     "pw:run": "npx playwright test playwright/tests/smoke/* --project=chromium --workers 1",
+    "psh:setup-starter": "node ./scripts/psh-setup-starter",
     "serve": "lerna run serve --scope @sites/${APP_SITE_NAME:-test-site} --stream",
     "setup": "npm run bootstrap && npm run build:packages",
     "setup:gatsby-cloud": "npm run bootstrap:gatsby-cloud && npm run build:packages",
@@ -92,6 +93,7 @@
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "axios": "^0.21.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.9.0",
     "cross-env": "^5.2.0",
