--- a/packages/bodiless-i18n/package.json
+++ b/packages/bodiless-i18n/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/i18n",
-  "version": "1.0.0-beta.12",
+  "version": "1.0.0-rc.1",
   "description": "Library to provide multilingual support for Bodiless",
   "author": "Konstantin Mishur <kmishur@its.jnj.com>",
   "license": "Apache-2.0",
@@ -26,9 +26,9 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
-    "@bodiless/cli": "^1.0.0-beta.12",
-    "@bodiless/core": "^1.0.0-beta.12",
-    "@bodiless/fclasses": "^1.0.0-beta.12",
+    "@bodiless/cli": "^1.0.0-rc.1",
+    "@bodiless/core": "^1.0.0-rc.1",
+    "@bodiless/fclasses": "^1.0.0-rc.1",
     "lodash": "^4.17.19",
     "typedoc": "^0.22.6",
     "typescript": "^4.0.0"
