--- a/packages/__vital__/package.json
+++ b/packages/__vital__/package.json
@@ -31,9 +31,11 @@
     "react": "^17.0.2"
   },
   "dependencies": {
+    "@bodiless/core": "^1.0.0-rc.1",
     "@bodiless/cli": "^1.0.0-rc.1",
     "@bodiless/fclasses": "^1.0.0-rc.1",
     "@bodiless/vital-elements": "^1.0.0-rc.1",
+    "@bodiless/vital-layout": "^1.0.0-rc.1",
     "@bodiless/vital-templates": "^1.0.0-rc.1",
     "@bodiless/vital-navigation": "^1.0.0-rc.1",
     "@bodiless/vital-link": "^1.0.0-rc.1",
