--- a/packages/vital-templates/package.json
+++ b/packages/vital-templates/package.json
@@ -40,6 +40,7 @@
     "@bodiless/fclasses": "^1.0.0-rc.2",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-rc.2",
     "@bodiless/ga4": "^1.0.0-rc.2",
+    "@bodiless/schema-org": "^1.0.0-rc.2",
     "@bodiless/vital-card": "^1.0.0-rc.2",
     "@bodiless/vital-content-listing": "^1.0.0-rc.2",
     "@bodiless/vital-editors": "^1.0.0-rc.2",
