--- a/packages/vital-accordion/package.json
+++ b/packages/vital-accordion/package.json
@@ -32,6 +32,7 @@
     "@bodiless/components": "^1.0.0-rc.2",
     "@bodiless/core": "^1.0.0-rc.2",
     "@bodiless/fclasses": "^1.0.0-rc.2",
+    "@bodiless/layouts": "^1.0.0-rc.2",
     "@bodiless/schema-org": "^1.0.0-rc.2",
     "@bodiless/vital-editors": "^1.0.0-rc.2",
     "@bodiless/vital-elements": "^1.0.0-rc.2",
