--- a/packages/bodiless-demo/package.json
+++ b/packages/bodiless-demo/package.json
@@ -14,6 +14,7 @@
     "/getDocs.js",
     "/tailwind.config.js",
     "/doc",
+    "/assets",
     "./shadow.js"
   ],
   "repository": {
@@ -39,6 +40,7 @@
     "@bodiless/hydration": "^1.0.0-rc.3",
     "@bodiless/richtext": "^1.0.0-rc.3",
     "@bodiless/richtext-ui": "^1.0.0-rc.3",
+    "@bodiless/table": "^1.0.0-rc.3",
     "@bodiless/vital-buttons": "^1.0.0-rc.3",
     "@bodiless/vital-card": "^1.0.0-rc.3",
     "@bodiless/vital-editors": "^1.0.0-rc.3",
