--- a/packages/vital-search/package.json
+++ b/packages/vital-search/package.json
@@ -7,12 +7,10 @@
   "main": "lib/index.js",
   "sideEffects": false,
   "typings": "lib/index.d.ts",
-  "bin": {
-    "create-search-index": "./bin/create-search-index"
-  },
   "files": [
     "/lib",
     "/bodiless.docs.json",
+    "/getDocs.js",    
     "/tailwind.config.js",
     "/doc"
   ],
@@ -35,6 +33,7 @@
     "react": "^17.0.2"
   },
   "dependencies": {
+    "@bodiless/cli": "^1.0.0-rc.10",    
     "@bodiless/core": "^1.0.0-rc.10",
     "@bodiless/fclasses": "^1.0.0-rc.10",
     "@bodiless/ga4": "^1.0.0-rc.10",
