--- a/packages/vital-search/package.json
+++ b/packages/vital-search/package.json
@@ -7,6 +7,9 @@
   "main": "lib/index.js",
   "sideEffects": false,
   "typings": "lib/index.d.ts",
+  "bin": {
+    "create-search-index": "./bin/create-search-index"
+  },
   "files": [
     "/lib",
     "/bodiless.docs.json",
