--- a/sites/vital-demo/package.json
+++ b/sites/vital-demo/package.json
@@ -20,6 +20,8 @@
     "@bodiless/documentation": "^1.0.0-rc.12",
     "@bodiless/fclasses": "^1.0.0-rc.12",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-rc.12",
+    "@bodiless/layouts": "^1.0.0-rc.12",
+    "@bodiless/layouts-ui": "^1.0.0-rc.12",
     "@bodiless/schema-org": "^1.0.0-rc.12",
     "@bodiless/ui": "^1.0.0-rc.12",
     "@bodiless/vital-buttons": "^1.0.0-rc.12",
