--- a/packages/vital-card-core/package.json
+++ b/packages/vital-card-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/vital-card",
+  "name": "@bodiless/vital-card-core",
   "version": "1.0.0-rc.12",
   "description": "Card component to display information through an image,text or other media content",
   "author": "Dewen Li <dli94@its.jnj.com>",
@@ -31,18 +31,8 @@
     "copy": "copyfiles -u 1 \"./src/**/*.{css,png}\" \"./lib/\""
   },
   "dependencies": {
-    "@bodiless/cli": "^1.0.0-rc.12",
-    "@bodiless/components": "^1.0.0-rc.12",
-    "@bodiless/components-ui": "^1.0.0-rc.12",
-    "@bodiless/core": "^1.0.0-rc.12",
     "@bodiless/fclasses": "^1.0.0-rc.12",
-    "@bodiless/hydration": "^1.0.0-rc.12",
-    "@bodiless/layouts": "^1.0.0-rc.12",
-    "@bodiless/vital-card-core": "^1.0.0-rc.12",
-    "@bodiless/vital-editors": "^1.0.0-rc.12",
     "@bodiless/vital-elements": "^1.0.0-rc.12",
-    "@bodiless/vital-image": "^1.0.0-rc.12",
-    "@bodiless/vital-link": "^1.0.0-rc.12",
     "lodash": "^4.17.19",
     "tailwindcss": "^3.0.23",
     "uuid": "^3.3.2"
