--- a/packages/bodiless-i18n/package.json
+++ b/packages/bodiless-i18n/package.json
@@ -8,6 +8,7 @@
   "typings": "lib/index.d.ts",
   "files": [
     "/lib",
+    "/doc",    
     "/bodiless.docs.json",
     "/getDocs.js"
   ],
@@ -22,7 +23,7 @@
     "build": "npm run build:lib && npm run build:api-doc",
     "build:lib": "tsc -p ./tsconfig.json",
     "build:watch": "npm run build:lib -- --watch",
-    "build:api-doc": "typedoc --out doc/api src",
+    "build:api-doc": "typedoc --options ../../typedoc.js --out doc/api src",
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
