--- a/packages/vital-navigation-core/package.json
+++ b/packages/vital-navigation-core/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@bodiless/cli": "^1.0.0-rc.17",
     "@bodiless/core": "^1.0.0-rc.17",
+    "@bodiless/components": "^1.0.0-rc.17",
     "@bodiless/fclasses": "^1.0.0-rc.17",
     "@bodiless/navigation": "^1.0.0-rc.17",
     "@bodiless/vital-buttons-core": "^1.0.0-rc.17",
