--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "npm run clean:symlinks && npx lerna@^5.0.0 bootstrap --hoist --strict",
     "bootstrap:gatsby-cloud": "npm i && npx lerna@^5.0.0 bootstrap",
     "build": "cross-env NODE_ENV=production lerna run build --stream --ignore @bodiless/gatsby-starter-bodiless",
+    "nxbuild": "npx nx run-many --target=build",
     "build:only": "cross-env NODE_ENV=production lerna run build --stream --scope",
     "build:packages": "cross-env NODE_ENV=production lerna run build --stream --ignore @sites/*",
     "build:watch": "cross-env NODE_ENV=development lerna run build:watch --parallel",
@@ -28,6 +29,7 @@
     "fix:target": "eslint --fix  --cache --ext .js,.jsx,.ts,.tsx",
     "fix:change": "git diff --name-only --diff-filter=d master... | grep -e 'tsx$' -e 'jsx$' -e 'js$' -e 'ts$' | xargs -L 1 npm run fix:target",
     "fresh": "npm run clean && lerna clean -y && rimraf node_modules && npm run setup",
+    "graph": "npm nx graph",
     "lint": "eslint --cache --ext .js,.jsx,.ts,.tsx packages sites --",
     "lint:target": "eslint --cache --ext .js,.jsx,.ts,.tsx",
     "lint:change": "git diff --name-only --diff-filter=d master... | grep -e 'tsx$' -e 'jsx$' -e 'js$' -e 'ts$' | xargs -L 1 npm run lint:target",
@@ -81,13 +83,14 @@
     "@babel/plugin-proposal-decorators": "^7.4.0",
     "@babel/plugin-transform-modules-commonjs": "7.5.0",
     "@babel/runtime": "^7.4.2",
+    "@nrwl/nx-cloud": "latest",
     "@playwright/test": "1.22",
     "@types/enzyme": "^3.9.1",
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.158",
     "@types/rc-tooltip": "^3.7.1",
-    "@types/react-dom": "^17.0.2",
     "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.2",
     "@types/slate": "^0.47.9",
     "@types/uuid": "^3.4.4",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
@@ -122,6 +125,7 @@
     "jest-sonar-reporter": "^2.0.0",
     "lerna": "^5.0.0",
     "npm-run-all": "^4.1.5",
+    "nx": "15.0.1",
     "ora": "^4.0.2",
     "react-test-renderer": "^17.0.2",
     "rimraf": "^2.6.3",
