--- a/packages/bodiless-ui/package.json
+++ b/packages/bodiless-ui/package.json
@@ -25,11 +25,11 @@
     "access": "public"
   },
   "scripts": {
-    "build": "npm run build:lib && npm run build:css && npm run copy",
+    "build": "npm run build:lib && npm run copy",
     "build:lib": "tsc -p ./tsconfig.json",
     "build:watch": "npm run build:lib -- --watch",
     "build:api-doc": "typedoc --options ../../typedoc.js --out doc/api ./src",
-    "build:css": "postcss index.tailwind.css -o ./src/bodiless.index.css",
+    "build:css":  "postcss index.tailwind.css -o ./src/bodiless.index.css",
     "copy": "copyfiles -u 1 \"./src/*.css\" \"./lib/\"",
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
