--- a/nx.json
+++ b/nx.json
@@ -5,6 +5,7 @@
       "options": {
         "cacheableOperations": [
           "build",
+          "lint",
           "test",
           "serve",
           "start"
