--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "scripts": {
     "bootstrap": "npm run clean:symlinks && npx lerna bootstrap --hoist --strict",
     "bootstrap:gatsby-cloud": "npm i && npx lerna bootstrap",
-    "build": "cross-env NODE_ENV=production nx run-many --target=build --stream --exclude=@bodiless/gatsby-starter-bodiless",
-    "nxbuild": "npx nx run-many --target=build",
+    "build": "cross-env NODE_ENV=production nx run-many --target build --exclude=@bodiless/gatsby-starter-bodiless",
     "build:only": "cross-env NODE_ENV=production lerna run build --stream --scope",
     "build:packages": "cross-env NODE_ENV=production nx run-many --exclude=@sites/*",
     "build:watch": "cross-env NODE_ENV=development lerna run build:watch --parallel",
@@ -33,7 +32,6 @@
     "lint": "eslint --cache --ext .js,.jsx,.ts,.tsx packages sites --",
     "lint:target": "eslint --cache --ext .js,.jsx,.ts,.tsx",
     "lint:change": "git diff --name-only --diff-filter=d master... | grep -e 'tsx$' -e 'jsx$' -e 'js$' -e 'ts$' | xargs -L 1 npm run lint:target",
-    "new": "node ./scripts/new-starter",
     "publish:all": "npm run build && lerna publish --registry $NPM_REGISTRY",
     "publish:from-package": "npm run build && lerna publish from-package --registry $NPM_REGISTRY",
     "publish:patch": "lerna version patch --conventional-commits --force-publish",
@@ -43,16 +41,10 @@
     "lerna:canary": "lerna publish --canary --include-merged-tags --preid ks-canary --dist-tag ks-canary --force-publish",
     "pw:run": "npx playwright test playwright/tests/smoke/* --project=chromium --workers 1",
     "psh:setup-starter": "node ./scripts/psh-setup-starter",
-    "serve": "lerna run serve --scope @sites/${APP_SITE_NAME:-test-site} --stream",
+    "serve": "nx run --project ${APP_SITE_DIR_NAME:test-site} serve",
     "setup": "npm run bootstrap && npm run build:packages",
     "setup:gatsby-cloud": "npm run bootstrap:gatsby-cloud && npm run build:packages",
-    "sites:pack": "lerna exec --no-private --stream -- npm pack",
-    "sites:clone-local": "node ./scripts/sites-clone",
-    "sites:install": "node ./scripts/sites-install",
-    "sites:update": "npm run sites:pack && npm run sites:install",
-    "sites:launch-test": "npm run sites:clone-local ${APP_SITE_DIR_NAME:-test-site} && npm run sites:update ${APP_SITE_DIR_NAME:-test-site} && cd sites/${APP_SITE_DIR_NAME:-test-site} && npm install --legacy-peer-deps && npm run start",
-    "sites:launch-monorepo": "cd sites/${APP_SITE_DIR_NAME:-test-site} && npm run start",
-    "start": "lerna run start --stream --scope @sites/${APP_SITE_NAME:-test-site}",
+    "start": "nx run --project ${APP_SITE_DIR_NAME:test-site} start",
     "sync:fix": "syncpack fix-mismatches",
     "sync:check": "syncpack list-mismatches",
     "test": "jest",
