--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "bootstrap:gatsby-cloud": "npm i && npx lerna bootstrap",
     "build": "cross-env NODE_ENV=production nx run-many --target build --exclude=@bodiless/gatsby-starter-bodiless",
     "build:only": "cross-env NODE_ENV=production lerna run build --stream --scope",
-    "build:packages": "cross-env NODE_ENV=production nx run-many --exclude=@sites/*",
+    "build:packages": "cross-env NODE_ENV=production nx run-many --target build --exclude=sites-test-site,sites-minimal-demo,sites-vital-demo",
     "build:watch": "cross-env NODE_ENV=development lerna run build:watch --parallel",
     "build:env-vars": "cross-env NODE_ENV=production lerna run build:env-vars --stream",
     "build:tailwind-configs": "cross-env NODE_ENV=production lerna run build:tailwind-configs --stream",
@@ -41,10 +41,10 @@
     "lerna:canary": "lerna publish --canary --include-merged-tags --preid ks-canary --dist-tag ks-canary --force-publish",
     "pw:run": "npx playwright test playwright/tests/smoke/* --project=chromium --workers 1",
     "psh:setup-starter": "node ./scripts/psh-setup-starter",
-    "serve": "nx run --project ${APP_SITE_DIR_NAME:test-site} serve",
+    "serve": "nx run --project ${APP_SITE_DIR_NAME:-test-site} serve",
     "setup": "npm run bootstrap && npm run build:packages",
     "setup:gatsby-cloud": "npm run bootstrap:gatsby-cloud && npm run build:packages",
-    "start": "nx run --project ${APP_SITE_DIR_NAME:test-site} start",
+    "start": "nx run --project ${APP_SITE_DIR_NAME:-test-site} start",
     "sync:fix": "syncpack fix-mismatches",
     "sync:check": "syncpack list-mismatches",
     "test": "jest",
