--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "scripts": {
     "bootstrap": "npm run clean:symlinks && npx lerna@^5.0.0 bootstrap --hoist --strict",
     "bootstrap:gatsby-cloud": "npm i && npx lerna@^5.0.0 bootstrap",
-    "build": "cross-env NODE_ENV=production lerna run build --stream --ignore @bodiless/gatsby-starter-bodiless",
-    "build:only": "cross-env NODE_ENV=production lerna run build --stream --scope",
-    "build:packages": "cross-env NODE_ENV=production lerna run build --stream --ignore @sites/*",
+    "build": "cross-env NODE_ENV=production turbo run build",
+    "build:only": "cross-env NODE_ENV=production turbo run build --scope",
+    "build:packages": "cross-env NODE_ENV=production turbo run build --ignore=sites/**/*",
     "build:watch": "cross-env NODE_ENV=development lerna run build:watch --parallel",
     "build:env-vars": "cross-env NODE_ENV=production lerna run build:env-vars --stream",
     "build:tailwind-configs": "cross-env NODE_ENV=production lerna run build:tailwind-configs --stream",
@@ -86,8 +86,8 @@
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.158",
     "@types/rc-tooltip": "^3.7.1",
-    "@types/react-dom": "^17.0.2",
     "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.2",
     "@types/slate": "^0.47.9",
     "@types/uuid": "^3.4.4",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
@@ -129,6 +129,7 @@
     "ts-jest": "^26.4.4",
     "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.11.1",
+    "turbo": "^1.6.1",
     "typedoc": "^0.22.6",
     "typedoc-plugin-markdown": "^3.11.3",
     "typescript": "^4.0.0"
@@ -139,5 +140,9 @@
   },
   "engines": {
     "node": ">=16.9"
-  }
+  },
+  "workspaces": [
+    "packages/*",
+    "sites/*"
+  ]
 }
