--- a/packages/fclasses/package.json
+++ b/packages/fclasses/package.json
@@ -27,9 +27,9 @@
     "url": "https://github.com/johnsonandjohnson/bodiless-js.git"
   },
   "scripts": {
-    "build": "npm run build:lib && npm run build:api-doc",
+    "build": "pnpm run build:lib && pnpm run build:api-doc",
     "build:lib": "tsc --version && tsc -p ./tsconfig.json",
-    "build:watch": "npm run build:lib -- --watch",
+    "build:watch": "pnpm run build:lib -- --watch",
     "build:api-doc": "typedoc --options ../../typedoc.js --out doc/api src",
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
@@ -37,12 +37,10 @@
     "@bodiless/cli": "^1.0.0-rc.21",
     "babel-plugin-preval": "5.0.0",
     "lodash": "^4.17.19",
+    "tailwindcss": "^3.0.23",
     "uuid": "^3.3.2"
   },
   "peerDependencies": {
     "react": "^17.0.2"
-  },
-  "devDependencies": {
-    "@types/tailwindcss": "^3.0.10"
   }
 }
