--- a/packages/bodiless-psh/package.json
+++ b/packages/bodiless-psh/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "run-p build:lib",
     "build:lib": "tsc -p ./tsconfig.json",
-    "build:watch": "npm run build:lib -- --watch",
+    "build:watch": "pnpm run build:lib -- --watch",
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo"
   },
   "directories": {
