--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "pnpm run sync:check && pnpm run lint && pnpm run check"
+      "pre-push": "pnpm run sync:check && pnpm run lint"
     }
   },
   "dependencies": {
