--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "license": "Apache-2.0",
   "scripts": {
-    "bootstrap": "pnpm run clean:symlinks && pnpm install --shamefully-hoist",
+    "bootstrap": "pnpm run timestamp && pnpm run clean:symlinks && pnpm install --shamefully-hoist && pnpm run timestamp",
     "bootstrap:gatsby-cloud": "pnpm i && npx lerna bootstrap",
     "build": "cross-env NODE_ENV=production pnpm run -r build",
     "build:only": "cross-env NODE_ENV=production pnpm run -r build",
@@ -43,7 +43,7 @@
     "pw:run": "npx playwright test playwright/tests/smoke/* --project=chromium --workers 1",
     "psh:setup-starter": "node ./scripts/psh-setup-starter",
     "serve": "pnpm run serve --scope @sites/${APP_SITE_NAME:-test-site} --stream",
-    "setup": "pnpm run bootstrap && pnpm run build:packages",
+    "setup": "pnpm run bootstrap && pnpm run build:packages && pnpm run timestamp",
     "setup:gatsby-cloud": "npm run bootstrap:gatsby-cloud && pnpm run build:packages",
     "start": "pnpm run start --stream --scope @sites/${APP_SITE_NAME:-test-site}",
     "sync:fix": "syncpack fix-mismatches",
@@ -52,7 +52,8 @@
     "test:monorepo-pw": "WAIT_ON_TIMEOUT=600000 start-server-and-test sites:launch-monorepo http://localhost:8005 pw:run",
     "test:ci": "WAIT_ON_TIMEOUT=600000 start-server-and-test sites:launch-test http://localhost:8005 cy:run",
     "test:monorepo": "WAIT_ON_TIMEOUT=600000 start-server-and-test sites:launch-monorepo http://localhost:8005 cy:run",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "timestamp": "echo timestamp=$(date \"+%Y/%m/%d %H:%M:%S\")"
   },
   "husky": {
     "hooks": {
