--- a/packages/bodiless-cli/package.json
+++ b/packages/bodiless-cli/package.json
@@ -55,7 +55,8 @@
     "semver": "^7.3.5",
     "tar": "^6.1.11",
     "uuid": "^3.3.2",
-    "walkdir": "^0.4.1"
+    "walkdir": "^0.4.1",
+    "yaml": "^1.10.2"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1",
